# transaction-manager

./: .gitignore  CMakeLists.txt  COMPLETION_REPORT.md  Makefile  README.md  build.ps1  input.txt  run-sample.ps1  run.ps1
.github/: copilot-instructions.md
include/concurrency/: Lock.h  LockManager.h  WaitForGraph.h
include/recovery/: LogManager.h  LogRecord.h  RecoveryManager.h
include/storage/: DataStore.h  Record.h
include/transaction/: Transaction.h  TransactionManager.h
include/utils/: constants.h  enums.h
src/: main.cpp
src/concurrency/: Lock.cpp  Lock.h  LockManager.cpp  LockManager.h  WaitForGraph.cpp  WaitForGraph.h
src/recovery/: LogManager.cpp  LogManager.h  LogRecord.cpp  LogRecord.h  RecoveryManager.cpp  RecoveryManager.h
src/storage/: DataStore.cpp  DataStore.h  Record.cpp  Record.h
src/transaction/: Transaction.cpp  Transaction.h  TransactionManager.cpp  TransactionManager.h
src/utils/: constants.h  enums.h
test/: CMakeLists.txt  test_deadlock.cpp  test_recovery.cpp  test_transactions.cpp
tests/: test_deadlock.cpp  test_recovery.cpp  test_transactions.cpp
